# cerebri

./: Kconfig  west.yml  zenoh_config.json5
app/b3rb/: CMakeLists.txt  prj.conf
app/b3rb/boards/: mr_canhubk3.overlay  native_posix.conf  tropic.conf  tropic.overlay
app/b3rb/src/: lighting.c
app/elm4/src/: lighting.c
app/melm/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/melm/src/: estimate.c  fsm.c  lighting.c  main.c  manual.c  mixing.c  mixing.h  position.c  velocity.c
app/melm/src/casadi/: generate.sh  melm.py
app/mrbuggy3/: prj.conf
app/rdd2/: prj.conf
app/rdd2/boards/: native_sim.conf  tropic.conf  tropic.overlay
app/rdd2/src/: attitude.c  estimate.c  manual.c  manual.c.orig  position.c
app/rdd2/src/casadi/: rdd2.py  (+1 more)
app/zenoh_test/: CMakeLists.txt  prj.conf
app/zenoh_test/src/: z_sub.c
lib/core/common/: Kconfig
lib/core/workqueues/: Kconfig
lib/dream/sil/: CMakeLists.txt  native_main.c  sil_context.h  zephyr_main.c
lib/estimate/: CMakeLists.txt  Kconfig
lib/estimate/ins/: CMakeLists.txt  Kconfig  main.c
lib/sense/imu/: Kconfig
lib/sense/mag/: Kconfig
lib/sense/safety/: Kconfig
lib/synapse/: CMakeLists.txt  Kconfig
lib/synapse/ethernet/: Kconfig
lib/synapse/topic/: Kconfig
lib/synapse/zenoh/: CMakeLists.txt  Kconfig  main.c  z_sub.c
modules/zenoh-pico/: CMakeLists.txt
scripts/: test_command.py  zenoh_pub.py  zenoh_sub.py
tests/lib/synapse/zros/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/synapse/zros/src/: main.c  publisher.c  subscriber.c  topic_list.c  topic_list.h
zephyr/: module.yml
(+4 files in other folders)
